# spindle-cli

./: LICENSE  README.md  pyproject.toml
src/spindle_cli/: main.py
src/spindle_cli/config/: __init__.py  get.py  list.py  set.py
